--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
+    
   </head>
   <body>
     <h1>Hello World!</h1>
@@ -10,6 +11,8 @@
     We are using Node.js <script>document.write(process.versions.node)</script>,
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
+
+    <input id="bt" type="button" value="dialog">
 
     <script>
       // You can also require other files to run in this process
